<resources>
    <string name="app_name">Justice App</string>


    <!-- Authentication String resources -->
    <string name="title_fragment_sign_in">SIGN IN</string>
    <string name="title_fragment_sign_up">SIGN UP</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login">Login</string>
    <string name="hint_sign_up_first_name">First name</string>
    <string name="hint_sign_up_last_name">Last Name</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_sign_up_password">Password</string>
    <string name="hint_sign_up_email">Email address</string>
    <string name="hint_sign_up_phone_number">Phone number</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_new_password">New password</string>
    <string name="text_recover_account">Recover Account</string>

    <string name="text_role_client">Client</string>
    <string name="text_role_lawyer">Lawyer</string>
    <string name="text_user_position">Are you a client or a lawyer?</string>
    <string name="string_login_with_google">Login with Google</string>
    <string name="string_login_with_phone">Login with Phone</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="minimum_password">Password should not be less than 6 characters</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="password">Password</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_email_address">Enter email address</string>
</resources>
